--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,8 +1,10 @@
 container_commands:
   01_migrate:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate"
+    command: "$PYTHONPATH/python manage.py migrate"
     leader_only: true
-  02_createsuperuser:
+  02_collectstatic:
+    command: "$PYTHONPATH/python manage.py collectstatic --noinput --verbosity=0 --clear"
+  03_createsuperuser:
     command: "echo \"from accounts.models import Account; Account.objects.create_superuser('first_name', 'last_name', 'your-email@gmail.com', 'yourusername', 'password')\" | python manage.py shell"
     leader_only: true
 option_settings:
